mds: don't add metadata to session close message

Old version kclient does not recognize session message with metatda.

Fixes: https://tracker.ceph.com/issues/43336
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit de2f57b4704e6e23ed27f531b6f6f3b825b9355f)

Conflicts:
        src/mds/Server.cc
- nautilus uses "MClientSession::create" instead of "make_message"